<resources>
    <string name="app_name">实淘</string>
    <string name="action_settings">设置</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="shopping_cart">购物车</string>
    <string name="data_loading">数据加载中...</string>
    <string name="main_search_hint">查找活动、商品、店铺</string>
    <string name="activity_date_msg">{0} ({1}) {2}-{3}</string>
    <string name="add_friend">加为好友</string>
    <string name="contact_merchanter">联系商家</string>
    <string name="add_friend_success">添加好友成功</string>
    <string name="goods_price">￥:{0}</string>
    <string name="goods_volume">销量:{0}</string>
    <string name="goods_carriage">邮费:{0}</string>
    <string name="shop_address">店铺地址：{0}</string>
    <string name="contact_num">联系电话：{0}</string>
    <string name="merchant_desc">商家简介</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="now_buy">立即购买</string>
    <string name="custom_service">客服</string>
    <string name="shop">店铺</string>
    <string name="collection">收藏</string>
    <string name="goods_evaluate">商品评价</string>
    <string name="goods_desc">商品简介：{0}</string>
    <string name="goods_stock">库存:({0})</string>
    <string name="collectioned">已收藏</string>
    <string name="category">分类</string>
    <string name="daily_new">今日上新</string>
    <string name="merchant_home">商家主页</string>
    <string name="goods_detail">商品详情</string>
    <string name="search">搜 索</string>
    <string name="my_order">我的订单</string>
    <string name="see_all_order">查看所有订单</string>
    <string name="waiting_pay">待付款</string>
    <string name="waiting_receipt">待收货</string>
    <string name="waiting_evaluate">待评价</string>
    <string name="refund_or_service">退款/售后</string>
    <string name="refunded">已退款</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_red_money">我的红包</string>
    <string name="my_friends">我的好友</string>
    <string name="my_baby">我的宝贝</string>
    <string name="self_info_change">个人信息修改</string>
    <string name="change_password">密码修改</string>
    <string name="my_receiv_address">我的收货地址</string>
    <string name="exit_account">退出账号</string>
    <string name="number">数量:</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="buy">购买</string>
    <string name="cancel">取消</string>
    <string name="data_executing">数据处理中...</string>
    <string name="please_wait">请稍等...</string>
    <string name="receipt_address">收货地址</string>
    <string name="add">添加</string>
    <string name="receipt_person">收货人</string>
    <string name="add_receipt_address">添加收货地址</string>
    <string name="ok">确定</string>
    <string name="receiver_person_name">收货人：{0}</string>
    <string name="detail_address">详细地址：{0}</string>
    <string name="is_default_receipt_address">是否默认收货地址</string>
    <string name="order_confirm">订单确认</string>
    <string name="total">合计:</string>
    <string name="user_msg">买家留言</string>
    <string name="order_detail_group_goods_count">共{0}件商品    小计:</string>
    <string name="tip">提示</string>
    <string name="pay">支付</string>
    <string name="apply_refund">申请退款</string>
    <string name="order_detail">订单详情</string>
    <string name="received">签收</string>
    <string name="account_number">登录账号（手机号）</string>
    <string name="password">登录密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="repeat_pwd">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="invit_code">邀请码</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="occupation">职业</string>
    <string name="area">区域</string>
    <string name="income">收入</string>
    <string name="accept_user_protocol">《同意用户协议》</string>
    <string name="regist_vercode">获取注册验证码</string>
    <string name="waiting_and_get_ver_code">{0}秒后重新获取</string>
    <string name="user_info">用户信息</string>
    <string name="you_have_new_message">你有新消息</string>
    <string name="empty_the_chat_record">清空当前聊天记录</string>
    <string name="reclick_exit_app">再按一次退出程序</string>
    <string name="evaluate">评价</string>
    <string name="no_dispatch">待发货</string>
    <string name="order_evaluate">评价</string>
    <string name="goods_evaluate_score">商品评分：</string>
    <string name="input_goods_evaluate">写下对商品的评价</string>
    <string name="activity_page">活动详情</string>
    <string name="join_main_chat_room">进入主会场</string>
    <string name="activity_main_center">活动会场</string>
    <string name="activity_member">参与人员</string>
    <string name="activity_fans">活动会员</string>
    <string name="merchant_version_login">商家版登录</string>
    <string name="login_code">登录账号</string>
    <string name="app_merchant_version">挚合实淘商家版</string>
    <string name="red_envelope">红包</string>
    <string name="shop_link">店铺链接</string>
    <string name="goods_link">商品链接</string>
    <string name="seckill_goods">秒杀商品</string>
    <string name="my_goods">我的商品</string>
    <string name="my_red_envelope">我的红包</string>
    <string name="merhcant_red_envelop">商家红包</string>
    <string name="red_envelop_item_detail">红包详情</string>
    <string name="saved_my_wallet">已存入我的钱包</string>
    <string name="save_my_wallet">存入我的钱包</string>
    <string name="modify">修改</string>
    <string name="my_seckill_goods">我的秒杀商品</string>
    <string name="now_grab_buy">立即抢购</string>
    <string name="data_load_fial_please_try_agin">数据加载失败，请重试</string>
    <string name="my_favorites">我的收藏</string>
    <string name="shopping_center">购物中心</string>
    <string name="featured_block">特色街区</string>
    <string name="user_info_change">用户信息修改</string>
    <string name="confirm_modify">确认修改</string>
    <string name="header_modify">头像编辑</string>
    <string name="my_wallet">我的钱包</string>
    <string name="find_password">找回密码</string>
    <string name="take_money_result">提现记录</string>
    <string name="merchant_login">商家登录</string>
    <string name="about_us">关于我们</string>
    <string name="app_name_and_version_name">实淘  {0}</string>
    <string name="user_protocol">用户协议</string>
    <string name="goods_comment">商品评价</string>
    <string name="core_activity">活动专区</string>
    <string name="coupon_detail_info">优惠券（代金券）详情</string>
    <string name="load_error_click_reload">加载失败，点击重试</string>
    <string name="complaint_rights">投诉维权</string>
    <string name="push_detail">推送详情</string>
    <string name="all_checked">全选</string>
    <string name="my_prize">我的奖品</string>
</resources>
