<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/user_mobile_num_et"
                style="@style/EditViewTheme"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/view_common_height"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:drawableLeft="@drawable/name"
                android:editable="false"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/user_nickname"
                style="@style/EditViewTheme"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/view_common_height"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:drawableLeft="@drawable/name"
                android:hint="@string/nickname"
                android:maxLength="20"
                android:textSize="14sp" />

            <Button
                android:id="@+id/user_sex_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/sex"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/user_birthday_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/birthday"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/user_occupation_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/occupation"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/user_area_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/area"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/user_income_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/income"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/submit_info_changed_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_modify" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>