<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                style="@style/CommonViewLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_layout_height"
                android:layout_marginBottom="@dimen/view_normal_margin">

                <ImageView
                    android:layout_width="@dimen/input_icon_size"
                    android:layout_height="@dimen/input_icon_size"
                    android:src="@drawable/account" />

                <EditText
                    android:id="@+id/user_mobile_num_et"
                    style="@style/CommonInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                style="@style/CommonViewLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_layout_height"
                android:layout_marginBottom="@dimen/view_normal_margin">

                <ImageView
                    android:layout_width="@dimen/input_icon_size"
                    android:layout_height="@dimen/input_icon_size"
                    android:src="@drawable/pwd" />

                <EditText
                    android:id="@+id/user_pwd"
                    style="@style/CommonInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                style="@style/CommonViewLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_layout_height"
                android:layout_marginBottom="@dimen/view_normal_margin">

                <ImageView
                    android:layout_width="@dimen/input_icon_size"
                    android:layout_height="@dimen/input_icon_size"
                    android:src="@drawable/pwd" />

                <EditText
                    android:id="@+id/user_repwd"
                    style="@style/CommonInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/repeat_pwd"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                style="@style/CommonViewLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_layout_height"
                android:layout_marginBottom="@dimen/view_normal_margin">

                <ImageView
                    android:layout_width="@dimen/input_icon_size"
                    android:layout_height="@dimen/input_icon_size"
                    android:src="@drawable/name" />

                <EditText
                    android:id="@+id/user_nickname"
                    style="@style/CommonInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/nickname"
                    android:maxLength="20"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                style="@style/CommonViewLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_layout_height"
                android:layout_marginBottom="@dimen/view_normal_margin">

                <ImageView
                    android:layout_width="@dimen/input_icon_size"
                    android:layout_height="@dimen/input_icon_size"
                    android:src="@drawable/name" />

                <EditText
                    android:id="@+id/invit_code"
                    style="@style/CommonInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/invit_code"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>


            <Button
                android:id="@+id/user_sex_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/sex"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/birthday_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/birthday"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/occupation_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/occupation"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/area_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/area"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/income_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_normal_margin"
                android:text="@string/income"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/accept_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:id="@+id/user_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_user_protocol"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_btn"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/register" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>