<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_code_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_white_bg"
                android:drawableLeft="@drawable/account"
                android:hint="@string/account_number"
                android:inputType="numberSigned"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/user_pwd_et"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_white_bg"
                android:drawableLeft="@drawable/pwd"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:padding="4dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/merchant_version_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="@string/merchant_version_login"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/border_white_bg"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/border_white_bg"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>