<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/goods_info_root_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ListView
        android:id="@+id/goods_info_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:divider="@null"
        android:scrollbars="none">

    </ListView>

    <LinearLayout
        android:id="@+id/goods_info_bottom_layout_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/white"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/goods_info_service_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/input_icon_size"
                    android:layout_height="@dimen/input_icon_size"
                    android:src="@drawable/custom_service" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/custom_service"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/goods_info_shop_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/input_icon_size"
                    android:layout_height="@dimen/input_icon_size"
                    android:src="@drawable/shop_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/shop"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/goods_info_collection_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/input_icon_size"
                    android:layout_height="@dimen/input_icon_size"
                    android:src="@drawable/collection" />

                <TextView
                    android:id="@+id/goods_info_focus_msg_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/collection"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/goods_info_shopping_cart_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ff9000"
                android:gravity="center"
                android:text="@string/add_shopping_cart"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/goods_info_buy_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ff5001"
                android:gravity="center"
                android:text="@string/now_buy"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>